fix: correct discord link & deduplicate.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@ title: Home
         <h1 class="display-3 fw-bold text-warning mb-2 glitch-text">LGI Alliance</h1>
         <h2 class="display-5 text-danger mb-3">Last Z: Survival Shooter</h2>
         <p class="lead text-light mb-4">Server 297. Fight. Build. Dominate.</p>
-        <a href="https://discord.gg/BSET2Vy3" target="_blank" class="btn btn-lg btn-danger text-white px-5 py-3 shadow-glow" style="border-radius: 50px; font-weight: 600; letter-spacing: 1px;">
-            Join Us on Discord
-        </a>
+        <div class="text-center">
+            <a href="{{ site.discord_url }}" target="_blank" class="btn btn-lg btn-danger text-white px-5 py-3 shadow-glow" style="border-radius: 50px; font-weight: 600; letter-spacing: 1px;">
+                Join Us on Discord
+            </a>
+        </div>
     </div>
     <!-- Overlay Glitch Effect -->
     <div class="glitch-overlay position-absolute top-0 start-0 w-100 h-100"></div>
