--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Home
+title: LGI Alliance
 ---
 <!-- Hero Section with Immersive Background -->
 <section class="hero position-relative overflow-hidden" style="background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #2a0a0a 100%); min-height: 60vh; display: flex; align-items: center;">
@@ -10,7 +10,7 @@ title: Home
         <h2 class="display-5 text-danger mb-3">Last Z: Survival Shooter</h2>
         <p class="lead text-light mb-4">Server 297. Fight. Build. Dominate.</p>
         <div class="text-center">
-            <a href="{{ site.discord_url }}" target="_blank" class="btn btn-lg btn-danger text-white px-5 py-3 shadow-glow" style="border-radius: 50px; font-weight: 600; letter-spacing: 1px;">
+            <a href="{{ site.discord_url }}" target="_blank" class="btn btn-lg btn-accent text-dark px-5 py-3 shadow-glow">
                 Join Us on Discord
             </a>
         </div>
