fix: Invalid base paths.

--- a/lgi/index.html
+++ b/lgi/index.html
@@ -4,7 +4,7 @@ title: LGI Alliance
 ---
 <section class="hero position-relative overflow-hidden" style="background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #2a0a0a 100%); min-height: 60vh; display: flex; align-items: center;">
     <div class="container text-center position-relative z-2">
-        <img src="/hero-image.jpg" class="img-fluid mb-3 rounded glitch" style="max-width: 300px; filter: drop-shadow(0 0 20px #ff0040);" alt="Last Z Wasteland Heroine – Sexy Survivor in Action">
+        <img src="{{ '/hero-image.jpg' | relative_url }}" class="img-fluid mb-3 rounded glitch" style="max-width: 300px; filter: drop-shadow(0 0 20px #ff0040);" alt="Last Z Wasteland Heroine – Sexy Survivor in Action">
         <h1 class="display-3 fw-bold text-warning mb-2 glitch-text">LGI Alliance</h1>
         <h2 class="display-5 text-danger mb-3">Last Z: Survival Shooter</h2>
         <p class="lead text-light mb-4">Server 297. Fight. Build. Dominate.</p>
